--- a/package.json
+++ b/package.json
@@ -15,17 +15,21 @@
   "dependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.12"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/body-parser": "^1.19.2",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.13.0",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
